Change scrollbar styles

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,3 +26,25 @@ body {
     rgb(var(--background-start-rgb));
   font-weight: 300;
 }
+
+/* Estilos para el scrollbar */
+::-webkit-scrollbar {
+  width: 5px; /* Ancho del scrollbar */
+}
+
+/* Estilos para el thumb del scrollbar */
+::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.1); /* Color del thumb */
+  border-radius: 3px; /* Borde redondeado del thumb */
+}
+
+/* Estilos para el thumb del scrollbar al hacer hover */
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(0, 0, 0, 0.2); /* Color del thumb al hacer hover */
+  width: 10px;
+}
+
+/* Estilos para el track del scrollbar */
+::-webkit-scrollbar-track {
+  background-color: transparent; /* Color del track */
+}
