--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -48,3 +48,24 @@ body {
 ::-webkit-scrollbar-track {
   background-color: transparent; /* Color del track */
 }
+
+table{
+  border-collapse: collapse;
+  width: 100%;
+  margin: 1rem 0;
+}
+
+th,
+td {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+th {
+  background-color: #f2f2f2;
+  font-weight: bold;
+}
+
+tr:nth-child(even) {
+  background-color: #f9f9f9;
+}
