--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,20 +3,20 @@
 @tailwind utilities;
 
 @layer base {
-  a{
-    @apply underline text-blue-600;
+  a {
+    @apply text-blue-600 underline;
   }
 
-  ul{
-    @apply list-disc mx-6 my-4;
+  ul {
+    @apply mx-6 my-4 list-disc;
   }
 
-  ol{
-    @apply list-decimal mx-6 my-4;
+  ol {
+    @apply mx-6 my-4 list-decimal;
   }
 
-  blockquote>p{
-    @apply text-base italic font-medium my-4 before:content-['"'] after:content-['"'];
+  blockquote > p {
+    @apply my-4 text-base font-medium italic before:content-['"'] after:content-['"'];
   }
 
   h1 {
@@ -29,11 +29,11 @@
     @apply text-lg;
   }
 
-  h4{
+  h4 {
     @apply text-base;
   }
 
-  img{
+  img {
     @apply w-2/4;
   }
 }
@@ -85,7 +85,7 @@ body {
   background-color: transparent; /* Color del track */
 }
 
-table{
+table {
   border-collapse: collapse;
   width: 100%;
   margin: 1rem 0;
