--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -39,27 +39,24 @@
 }
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --primary-color: #1B4AEF;
+  --secondary-color: #FFFFFF;
+  --background: #E8EFF9;
+  --foreground: #26262C;
+  --custom-blue: #2F7DFD;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 50, 50, 50;
-    --background-end-rgb: 50, 50, 50;
+    --secondary-color: #343145;
+    --background: #252331;
+    --foreground: #FAFAFA;
   }
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  color: rgb(var(--foreground));
+  background: var(--background);
   font-weight: 300;
 }
 
