--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -38,30 +38,24 @@
   }
 }
 
-:root {
-  --primary-color: #1b4aef;
-  --secondary-color: #ffffff;
-  --secondary-color-alpha: #ffffffb0;
-  --background: #e8eff9;
-  --foreground: #26262c;
-  --custom-blue: #73a7fb;
-}
-
-@media (prefers-color-scheme: dark) {
+@layer base {
   :root {
-    --secondary-color: #292a33;
-    --secondary-color-alpha: #292a33b0;
-    --background: #343540;
-    --foreground: #fafafa;
+    --primary-color: #1b4aef;
+    --secondary-color: #ffffff;
+    --secondary-color-alpha: #ffffffb0;
+    --background: #e8eff9;
+    --foreground: #26262c;
+    --custom-blue: #73a7fb;
+  }
+    
+  .dark {
+      --secondary-color: #292a33;
+      --secondary-color-alpha: #292a33b0;
+      --background: #343540;
+      --foreground: #fafafa;
   }
 }
 
-[data-theme='dark']{
-  --secondary-color: #292a33;
-  --secondary-color-alpha: #292a33b0;
-  --background: #343540;
-  --foreground: #fafafa;
-}
 
 body {
   color: rgb(var(--foreground));
