Add Settings component

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,7 +43,7 @@
     --primary-color: #1b4aef;
     --secondary-color: #ffffff;
     --secondary-color-alpha: #ffffffb0;
-    --background: #e8eff9;
+    --background: #f0f4f9;
     --foreground: #26262c;
     --custom-blue: #73a7fb;
   }
