Adjust prompt form component

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,6 +43,7 @@
     --primary-color: #1b4aef;
     --secondary-color: #f0f4f9;
     --secondary-color-alpha: #ffffffb0;
+    --background-alpha: #ffffffb0;
     --background: #ffffff;
     --foreground: #26262c;
     --custom-blue: #73a7fb;
@@ -51,6 +52,7 @@
   .dark {
       --secondary-color: #292a33;
       --secondary-color-alpha: #292a33b0;
+      --background-alpha: #343540b0;
       --background: #343540;
       --foreground: #fafafa;
   }
