--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -45,16 +45,18 @@
     --secondary-color-alpha: #ffffffb0;
     --background-alpha: #ffffffb0;
     --background: #ffffff;
-    --foreground: #26262c;
-    --custom-blue: #73a7fb;
+    --foreground: #484848;
+    --primary-alt: #73a7fb;
   }
 
   .dark {
-    --secondary-color: #292a33;
-    --secondary-color-alpha: #292a33b0;
-    --background-alpha: #343540b0;
-    --background: #343540;
-    --foreground: #fafafa;
+    --primary-color: #003f5c;
+    --secondary-color: #131314;
+    --secondary-color-alpha: #131314b0;
+    --background-alpha: #1e1f20b0;
+    --background: #1e1f20;
+    --foreground: #a2a2a2;
+    --primary-alt: #005c86;
   }
 }
 
