--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,21 +40,21 @@
 
 @layer base {
   :root {
-    --primary-color: #1b4aef;
-    --secondary-color: #e4eaf1;
-    --secondary-color-alpha: #ffffff8a;
-    --background-alpha: #ffffff8a;
+    --primary: #1b4aef;
+    --secondary: #e4eaf1;
+    --secondary-alpha: #ffffff8a;
     --background: #ffffff;
+    --background-alpha: #ffffff8a;
     --foreground: #484848;
     --primary-alt: #73a7fb;
   }
 
   .dark {
-    --primary-color: #003f5c;
-    --secondary-color: #131314;
-    --secondary-color-alpha: #1313148a;
-    --background-alpha: #1e1f208a;
+    --primary: #003f5c;
+    --secondary: #131314;
+    --secondary-alpha: #1313148a;
     --background: #1e1f20;
+    --background-alpha: #1e1f208a;
     --foreground: #a2a2a2;
     --primary-alt: #005c86;
   }
