--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -57,7 +57,7 @@
     --background: #1e1f20;
     --background-alpha: #1e1f208a;
     --foreground: #a2a2a2;
-    --primary-300: #005c86;
+    --primary-300: #0092d6;
   }
 }
 
