--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -48,6 +48,7 @@
     --foreground: #484848;
     --primary-300: #73a7fb;
     --danger: #d8514b;
+    --highlight: #000000;
   }
 
   .dark {
@@ -58,6 +59,7 @@
     --background-alpha: #1e1f208a;
     --foreground: #a2a2a2;
     --primary-300: #0092d6;
+    --highlight: #dddddd;
   }
 }
 
