--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,8 +43,8 @@
     --primary: #1b4aef;
     --secondary: #e4eaf1;
     --secondary-alpha: #ffffff8a;
-    --background: #ffffff;
-    --background-alpha: #ffffff8a;
+    --background: #f7f7f7;
+    --background-alpha: #f7f7f78a;
     --foreground: #484848;
     --primary-300: #73a7fb;
     --danger: #d8514b;
