--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -106,10 +106,10 @@ td {
 }
 
 th {
-  background-color: var(--background);
+  background-color: var(--secondary);
   font-weight: bold;
 }
 
 tr:nth-child(even) {
-  background-color: var(--background);
+  background-color: var(--secondary);
 }
